src/test/compile-fail/import-from-path.rs
// error-pattern:cannot path into import list
import foo::{bar}::baz